src/test_output.txt
   Compiling cell v0.1.0 (I:\GitProjects\Cell)
warning: unused import: `std::path::Path`
 --> src\loader.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `anyhow`
 --> src\codegen.rs:1:22
  |
1 | use anyhow::{Result, anyhow};
  |                      ^^^^^^

warning: unused import: `CellRef`
 --> src\codegen.rs:8:46
  |
8 | use crate::parser::{Expr, Stmt, Op, Literal, CellRef, CellContent, FunctionDef, Direction, Block};
  |                                              ^^^^^^^

error[E0308]: mismatched types
   --> src\parser.rs:589:9
    |
589 |     let (rem, cell) = parse_cell(input).unwrap();
    |         ^^^^^^^^^^^   -------------------------- this expression has type `parser::CellContent`
    |         |
    |         expected `CellContent`, found `(_, _)`
    |
    = note: expected enum `parser::CellContent`
              found tuple `(_, _)`

For more information about this error, try `rustc --explain E0308`.
warning: `cell` (bin "cell" test) generated 3 warnings
error: could not compile `cell` (bin "cell" test) due to 1 previous error; 3 warnings emitted
